// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show correct summary for 0 expenses 1`] = `
<div>
  Viewing 
  0
  /
   expenses totalling $
  0.00
</div>
`;

exports[`should show correct summary for 1 expenses 1`] = `
<div>
  Viewing 
  1
  /
   expenses totalling $
  0.99
</div>
`;

exports[`should show correct summary for 2 expenses 1`] = `
<div>
  Viewing 
  2
  /
   expenses totalling $
  4.94
</div>
`;
